# django-admin-ordering

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  biome.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
admin_ordering/: __init__.py  admin.py  models.py
admin_ordering/locale/de/LC_MESSAGES/: django.mo  django.po
admin_ordering/locale/fr/LC_MESSAGES/: django.mo  django.po
admin_ordering/static/admin_ordering/: admin_ordering.css  admin_ordering.js  jquery-ui.min.css  jquery-ui.min.js
testapp/: admin.py  models.py  runtests.py  test_admin_ordering.py  urls.py
tests/testapp/: admin.py  models.py  settings.py  test_admin_ordering.py  urls.py
tests/testapp/migrations/: 0001_initial.py
