[metadata]
name = django_admin_ordering
version = attr: admin_ordering.__version__
description = Orderable change lists and inlines done right^Wsimple
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-admin-ordering/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    django-js-asset
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    testapp

[coverage:run]
branch = True
include =
    *admin_ordering*
omit =
    *migrations*
    *tests*
    *.tox*
